Changes the theme and fixed some points overlapping

--- a/src/styles/layout.css
+++ b/src/styles/layout.css
@@ -55,8 +55,15 @@ body {
   padding-bottom: 1px;
 }
 
+.scroll-container {
+  display: flex;
+
+  flex-direction: column;
+
+  /* gap: 80px; */
+}
 /* ── Entry ── */
-.entry {
+/* .entry {
   margin-bottom: 1.4rem;
 }
 
@@ -100,4 +107,4 @@ body {
   border: 1px solid #ddd;
   padding: 0.12rem 0.5rem;
   border-radius: 3px;
-}
+} */
